# EVM

./: .gitignore  .pre-commit-config.yaml  README.md  image_stabilization.py  main.py  preprocessing.py  pyproject.toml  test.py  test.txt  test2.py  test3.py  test4.py  tox.ini
evm/: converters.py  filter.py  magnify.py  pyramid.py  utils.py  video.py
src/evm/: utils.py  video.py
